...
"Add your payment information" = "Add your payment information";

/* Text on a screen asking the user to approve a payment */
"Approve payment" = "Approve payment";

/* Text for back button */
"Back" = "Back";

/* A label used in various UIs, including a button that represents a payment method type 'Bank' - where a user can pay with their bank account instead of, say, a credit card.
   Label shown in the payment type picker describing a bank payment */
"Bank" = "Bank";

/* Title for collected bank account information */
"Bank account" = "Bank account";

...
"Naver Pay Card" = "Naver Pay Card";

/* Naver Pay money or points funding source */
"Naver Pay Money/Point" = "Naver Pay Money/Point";

/* Label of a button that appears on a checkout screen. When tapped, it displays a credit card form. This button is shown next to another button representing the customer's saved card; the word 'new' is meant to differentiate this button's action with the saved card button. */
"New card" = "New card";

/* Title shown above a section containing payment methods that a customer can choose to pay with e.g. card, bank account, etc. */
"New payment method" = "New payment method";

/* Label for when the user is not eligible for a promo. */
"No %@ promo" = "No %@ promo";
...
/* Promotional text for Affirm, displayed in a button that lets the customer pay with Affirm */
"Pay over time with Affirm" = "Pay over time with Affirm";

/* Text for the 'Pay with Link' button. The placeholder is a Stripe brand name and should not be translated. */
"Pay with %@" = "Pay with %@";

/* Text for the 'Pay with Link' button. 'Link' is a Stripe brand, please do not translate the word 'Link'. */
"Pay with Link" = "Pay with Link";

/* US Bank Account copy title for Mobile payment element form */
"Pay with your bank account in just a few steps." = "Pay with your bank account in just a few steps.";

/* Label for a section displaying payment details. */
...
"Update payment method" = "Update payment method";

/* Label for checkbox in address form allowing user to use billing address */
"Use billing address for shipping" = "Use billing address for shipping";

/* Text shown on a button that displays a customer's default saved payment method. When tapped, it opens a screen that shows all of the customer's saved payment methods. */
"View more" = "View more";

/* Text for a tappable link that will update the email field with a suggested email address. */
"Yes, update" = "Yes, update";

/* Message of a confirmation alert warning the customer that closing the address form will discard their unsaved changes. */
"Your address changes won't be saved." = "Your address changes won't be saved.";
...
