...
                Button("Done") {
                    doneAction(viewModel)
                }
            }.padding()
            Group {
                VStack {
                    SettingPickerView(setting: $viewModel.paymentMethodOptionsSetupFutureUsage.card, customDisplayLabel: "Card")
                    if viewModel.merchantCountryCode == .US, viewModel.currency == .usd, viewModel.allowsDelayedPMs == .on {
                        SettingPickerView(setting: $viewModel.paymentMethodOptionsSetupFutureUsage.usBankAccount, customDisplayLabel: "US Bank Account")
                    }
                    if viewModel.allowsDelayedPMs == .on, viewModel.currency == .eur {
                        SettingPickerView(setting: $viewModel.paymentMethodOptionsSetupFutureUsage.sepaDebit, customDisplayLabel: "SEPA Debit")
                    }
...
